<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CommonTasker</string>
    <string name="action_facebook">Facebook</string>
    <string name="label_btn_find">ΒΡΕΣ ΤΟ!</string>
    <string name="action_youtube">YouTube</string>
    <string name="btn_send">Send</string>
    <string name="country_prompt">Choose a category</string>
    <string name="cat">Choose a category</string>
    <string name="per">Choose a city</string>
    <string name="txt_hint">Type Message</string>
    <string name="choose_device_name">Choose your device name"</string>
    <string name="ip_not_available">IP not available</string>
    <string name="splash_comment">CommonTasker!
        Crowdsourcing tasks within the community!</string>
    <string name="action_phone">Make a Call</string>
    <string name="action_home">Home</string>
    <string name="menu_1">Καθαρισμός Ιστορικού</string>
    <string name="menu_2">Option 2</string>
    <string name="menu_search">Search</string>
    <string name="str_btn_find">Find it!</string>
    <string name="hnt_et_location">Give an address</string>
    <string name="hnt_et_location1">Give second  address</string>
    <string name="google_place_api">AIzaSyCgS-Td7HImzGjEA5V9i_PR97FnDzMxRik</string>
    <string name="settings">Settings</string>
    <string name="category">Επιλέξτε Κατηγορία</string>
    <string name="warning">Για οποιαδήποτε ενέργεια στην εφαρμογή θα πρέπει, να είστε εγγεγραμμμένος χρήστης και άνω των 18 απαραίτητα ώστε να εκτελέστε μια ένεργεια ή δυνατότητα της!</string>
    <string name="err_msg_required">Παρακαλώ δώστε ένα επιτρεπόμενο</string>
    <string name="err_msg_password">Give a Password</string>
    <string name="err_msg_mail">Παρακαλώ δώστε ένα επιτρεπόμενο Email</string>
    <string name="err_msg_name">Give a Name</string>
    <string name="err_msg_skill">Δώστε ένα επιθυμητό Επάγγελμα η μία Δεξιότητα σας</string>
    <string name="facebook_app_id">954999631276677</string>
    <string name="edit">Edit User</string>
    <string name="hello_world">Tap two locations in the map</string>
    <string name="error_permission_map">Δεν επιτρέπεται οι λειτουργίες του χάρτη!</string>
    <string name="dialer">Άνοιγμα Τηλεφώνου</string>
    <string name="delete">Delete User</string>
    <string name="str_rb_normal">Normal</string>
    <string name="str_rb_driving">Driving</string>
    <string name="str_rb_bicycling">BiCycling</string>
    <string name="str_rb_walking">Walking</string>
    <string name="str_rb_satellite">Satellite</string>
    <string name="str_rb_terrain">Terrain</string>
    <string name="str_tv_distance_time">Aπόσταση:</string>


    <string name="title_activity_maps">Map</string>

    <string-array name="area_names">
        <item>Elassona </item>
        <item>Small Eleftherohori</item>
        <item>Dolihi</item>
        <item>Flabouro</item>
        <item>Kokkinogi</item>
        <item>Kokkinopilos</item>
        <item>Lofos</item>
        <item>Pithio</item>
        <item>Kalivia</item>
        <item>Sarantaporo</item>
        <item>Likoudi</item>
        <item>Geraneia</item>
        <item>Milea</item>
        <item>Farmaki</item>
        <item>Tsapournia</item>
    </string-array>

    <string-array name="erwthseis">
        <item>Food</item>
        <item>Politics</item>
        <item>Health</item>
        <item>Social</item>

    </string-array>
    <string-array name="mhxanimata">
        <item>Tools</item>
        <item>Machinery</item>
        <item>Fertilizers</item>
    </string-array>

    <string-array name="erga">
        <item>Outdoor tasks</item>
        <item> Indoor tasks</item>
        <item> Offering assistance</item>
    </string-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="action_settings">Settings</string>
    <string name="searchable">Αναζήτηση</string>
    <string name="button5">Perform an errand</string>

</resources>



