<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TopPaidFragment">
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
        <RadioGroup
            android:id="@+id/rg_modes"
            android:layout_margin="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <RadioButton android:id="@+id/rb_driving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_rb_driving"
                android:checked="true" />

            <RadioButton android:id="@+id/rb_bicycling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_rb_bicycling" />

            <RadioButton android:id="@+id/rb_walking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_rb_walking" />

        </RadioGroup>
        <RadioGroup
            android:id="@+id/rg_views"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button13"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RadioButton
                android:id="@+id/rb_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_rb_normal"
                android:checked="true" />

            <RadioButton
                android:id="@+id/rb_satellite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_rb_satellite" />

            <RadioButton
                android:id="@+id/rb_terrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_rb_terrain" />

        </RadioGroup>
        <Button
            android:id="@+id/btn_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_find"
            android:layout_alignParentRight="true" />

        <EditText
            android:id="@+id/et_location"
            android:layout_below="@+id/rg_views"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hnt_et_location"
            android:layout_toLeftOf="@id/btn_find" />



        <TextView
            android:id="@+id/distance_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/rg_views" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnzoomin"
            android:onClick="onZoom"
            android:background="@drawable/ic_zoom_in"
            android:layout_marginTop="89dp"
            android:layout_alignTop="@+id/map"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnzoomout"
            android:background="@drawable/ic_zoom_out"
            android:onClick="onZoom"
            android:layout_marginTop="167dp"
            android:layout_below="@+id/btnzoomin"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_alignLeft="@+id/rg_modes"
            android:layout_alignStart="@+id/rg_modes"
            android:layout_below="@+id/et_location"
            android:layout_above="@+id/rg_modes"
            android:layout_toLeftOf="@+id/btnzoomin"
            android:layout_toStartOf="@+id/btnzoomin"/>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    </RelativeLayout>
    </LinearLayout>